--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -716,7 +716,7 @@
     <string name="gbx_merchant">Merchant Agreement</string>
     <string name="gbx_merchant1">Merchant</string>
 
-    <string name="complete_idve">Please complete your Identity Verification process.</string>
+    <string name="complete_idve"> Your Account is Under Review, please contact Customer support</string>
     <string name="otp_retry_error">Looks like something went wrong. Please try again</string>
 
     <string name="alert">Alert</string>
