--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -836,4 +836,8 @@
     <string name="accessrestricted">coyni is unavailable in your region. We restrict access only to areas inside the United States. If you are using a VPN, please turn it off and try again.</string>
     <string name="accessrestrictederrorcode">CY30200302</string>
 
+    <string name="choose_library">Choose From Library</string>
+    <string name="take_photo">Take a Photo</string>
+    <string name="browse_files">Browse Files</string>
+
 </resources>
