Blocked card changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -842,5 +842,6 @@
     <string name="dots">\u0020••••</string>
     <string name="dot">••••</string>
     <string name="updateTitle">Update Required</string>
+    <string name="block">Blocked</string>
 
 </resources>
