--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -849,5 +849,6 @@
     <string name="choose_library">Choose From Library</string>
     <string name="take_photo">Take a Photo</string>
     <string name="browse_files">Browse Files</string>
+    <string name="sale_order_ecommerce">Sale Order- eCommerce</string>
 
 </resources>
