--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -850,4 +850,11 @@
     <string name="take_photo">Take a Photo</string>
     <string name="browse_files">Browse Files</string>
 
+    <string name="skip">Skip</string>
+    <string name="add_debit_or_credit_card">Add Debit or Credit Card</string>
+    <string name="account_created">Account Created!</string>
+    <string name="your_coyni_account_is_now_ready_get_started_by_adding_a_debit_or_credit_card">Your coyni account is now ready. Get started by adding a debit or credit card.</string>
+    <string name="save_this_address_as_my_account_address">Save this address as my account address.</string>
+
+    <string name="agreement_desc">Please read and accept each agreement.</string>
 </resources>
