--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -643,7 +643,8 @@
     <string name="confirmation_msg">Do you want to discard the changes?</string>
     <string name="pre_authorization">Pre-Authorization</string>
     <!--    <string name="preauth_description">A temporary hold was placed on your card and will be removed by the end of this verification process. Please check your Bank/Card statement for a charge from [Descriptor Name] and enter the amount below.</string>-->
-    <string name="preauth_description">For security reasons, we have charged your card a small amount which will be removed after the verification process is complete.  Please check your recent card transactions and enter the amount of this charge below.</string>
+    <!--    <string name="preauth_description">For security reasons, we have charged your card a small amount which will be removed after the verification process is complete.  Please check your recent card transactions and enter the amount of this charge below.</string>-->
+    <string name="preauth_description">A temporary hold was placed on your card and will be removed by the end of this verification process. Please check your bank/card statement for a charge from [Descriptor Name] and enter the amount below.</string>
     <string name="incorrect_amount_1_attempt_left">Incorrect amount, 1 attempt left</string>
     <string name="please_check_the_box_if_you_completed_a_task">Please check the box if you completed a task</string>
     <string name="footer_full_legal_name_as_it"><b>%1$s</b> - %2$s </string>
