--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -815,7 +815,7 @@
     <string name="bank_account_failed">Verification Failed</string>
     <string name="android_text">Android</string>
     <string name="select_type_description">Please choose if you want to create a Business or Personal coyni account. You can always create another one later.</string>
-    <string name="pp">Privacy Policy.</string>
+    <string name="pp">Privacy Policy</string>
     <string name="m_agree">Merchant Agreement</string>
     <string name="trackerbank">No Mail</string>
     <string name="add_manual_bank_same_value_error">Account Number and Routing Number cannot have the same value.</string>
