--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="maxlength">8</string>
     <string name="maxlendecimal">13</string>
+    <string name="please_try_after">Looks like we are having an issue, please try after sometime.</string>
 
 </resources>
