--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,23 @@
     <string name="transaction_failed">Transaction Failed</string>
     <string name="we_were_unable_to_complete_your_transaction_due_to_the_reason">We were unable to complete your transaction due to the reason:</string>
     <string name="e1234_verification_failed">[E1234 - Verification Failed]</string>
+    <string name="activity_log">Activity Log</string>
+    <string name="ledger_information">Ledger Information</string>
+    <string name="employee_name">Employee Name</string>
+    <string name="employee_id">Employee ID</string>
+    <string name="customer_email">Customer Email</string>
+    <string name="customer_name">Customer Name</string>
+    <string name="customer_information">Customer Information</string>
+    <string name="copy">Copy</string>
+    <string name="reference_id">Reference ID</string>
+    <string name="status">Status</string>
+    <string name="date">Date</string>
+    <string name="total">Total</string>
+    <string name="tip_1_00">Tip ([1.00%])</string>
+    <string name="refund">Refund</string>
+    <string name="customer_service_phone">Customer Service Phone</string>
+    <string name="original_transaction_details">Original Transaction Details</string>
+    <string name="transaction_amount">Transaction Amount</string>
 
 
 </resources>
