--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,13 @@
     <string name="please_do_not_close_this_window">Please do not close this window</string>
     <string name="purchase_complete">Purchase Complete</string>
     <string name="terminal_name">Terminal Name</string>
+    <string name="calendar_sunday">S</string>
+    <string name="calendar_monday">M</string>
+    <string name="calendar_tuesday">T</string>
+    <string name="calendar_wednesday">W</string>
+    <string name="calendar_thursday">T</string>
+    <string name="calendar_friday">F</string>
+    <string name="calendar_saturday">S</string>
 
 
 </resources>
